# CipherMesh

./: .gitignore  ANDROID_STUDIO_GUIDE.md  AUTOFILL_AUTOSAVE_IMPLEMENTATION_GUIDE.md  AUTOFILL_EXECUTION_PLAN.md  AUTOFILL_IMPLEMENTATION_STATUS.md  BUILD_ANDROID_STUDIO.md  CMakeLists.txt  CODE_ANALYSIS_REPORT.md  EDGE_CASES_FIXED.md  FINAL_FIXES_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_REVIEW_SYNC_CONCURRENCY.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_SUGGESTIONS.md  MOBILE_APP_COMPLETION.md  NEXT_PR_REQUIREMENTS.md  P2P_BUG_ANALYSIS.md  P2P_FIX_SUMMARY.md  PROTOCOL_CONSISTENCY.md  QT_CREATOR_GUIDE.md  QUICK_START_ANDROID_STUDIO.md  README.md  REFACTORING_SUMMARY.md  REMAINING_ISSUES.md  SIGNAL_SERVER_FIXES.md  SYNC_FIXES_SUMMARY.md  TESTING_REPORT.md  UNUSED_FEATURES_ANALYSIS.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: build_apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
extensions/chrome/: content.js
extensions/firefox/: content.js
extensions/vault-service/: CMakeLists.txt  com.ciphermesh.vault.json.in  main.cpp  vault_service.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  crypto.cpp  crypto.hpp  database.cpp  database.hpp  vault.cpp  vault.hpp  vault_entry.hpp
src/desktop/: main.cpp  mainwindow.cpp  mainwindow.hpp  newentrydialog.cpp  passwordgeneratordialog.cpp  settingsdialog.cpp  sharegroupdialog.cpp  sharegroupdialog.hpp  unlockdialog.cpp  unlockdialog.hpp
src/mobile/: EntryDetailScreen.qml  Main.qml  SettingsScreen.qml  UnlockScreen.qml  VaultListScreen.qml  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_final.txt  main_mobile.cpp  qml.qrc  settings.gradle.kts  vaultqmlwrapper.cpp  vaultqmlwrapper.hpp
src/mobile/android/: AndroidManifest.xml
src/mobile/app/: build.gradle.kts
src/mobile/app/release/: output-metadata.json
src/mobile/app/release/baselineProfiles/0/: app-release.dm
src/mobile/app/release/baselineProfiles/1/: app-release.dm
src/mobile/app/schemas/com.ciphermesh.mobile.data.AppDatabase/: 1.json
src/mobile/app/src/androidTest/java/com/ciphermesh/mobile/: ExampleInstrumentedTest.kt
src/mobile/app/src/main/: AndroidManifest.xml
src/mobile/app/src/main/cpp/: native-lib.cpp
src/mobile/app/src/main/java/com/ciphermesh/core/: Vault.kt
src/mobile/app/src/main/java/com/ciphermesh/mobile/: BiometricHelper.kt  CipherMeshApplication.kt  CryptoBridge.kt  CustomAdapter.kt  EntryModel.kt  HomeActivity.kt  MainActivity.kt  PasswordHistoryAdapter.kt  PortraitCaptureActivity.kt  RecentEntriesActivity.kt  SettingsActivity.kt
src/mobile/app/src/main/java/com/ciphermesh/mobile/autofill/: AutoSaveActivity.kt  AutofillAuthActivity.kt  CipherMeshAutofillService.kt  EntryMatcher.kt  StructureParser.kt
src/mobile/app/src/main/java/com/ciphermesh/mobile/data/: VaultDatabase.kt
src/mobile/app/src/main/java/com/ciphermesh/mobile/p2p/: P2PManager.kt
src/mobile/app/src/main/java/com/ciphermesh/mobile/ui/: PasswordGeneratorDialog.kt
src/mobile/app/src/main/java/com/ciphermesh/util/: BreachChecker.kt  PasswordGenerator.kt  TotpUtil.kt
src/mobile/app/src/main/res/color/: selector_input_stroke.xml
src/mobile/app/src/main/res/drawable/: bg_circle_icon.xml  bg_input_field.xml  bg_list_border.xml  bg_theme_preview_light.xml  circle_bg_light.xml  circular_progress.xml
src/mobile/app/src/main/res/layout/: activity_home.xml  activity_invites.xml  activity_main.xml  activity_recent_entries.xml  activity_settings.xml  autofill_item.xml  bottom_sheet_entry_options.xml  dialog_accept_invite.xml  dialog_add_entry.xml  dialog_change_password.xml  dialog_confirm_password.xml  dialog_create_entry.xml  dialog_create_group.xml  dialog_edit_location.xml  dialog_edit_locations.xml  dialog_entry_details.xml  dialog_export_password.xml  dialog_factory_reset.xml  dialog_forgot_password.xml  dialog_manage_group.xml  dialog_password_generator.xml  dialog_password_history.xml  dialog_share_group.xml  dialog_theme_picker.xml  item_invite_row.xml  item_list_row.xml  item_location_editor_row.xml  item_location_row.xml  item_member_row.xml  item_password_history.xml  item_vault_entry.xml  nav_header_main.xml  spinner_dropdown_item.xml  spinner_item.xml
src/mobile/app/src/main/res/menu/: activity_main_drawer.xml  home_toolbar_menu.xml  menu_home.xml
src/mobile/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
src/mobile/app/src/main/res/xml/: autofill_service_config.xml
src/mobile/app/src/test/java/com/ciphermesh/mobile/: ExampleUnitTest.kt
src/mobile/gradle/: libs.versions.toml
src/mobile/gradle/wrapper/: gradle-wrapper.properties
src/p2p/: ip2pservice.cpp  ip2pservice.hpp
src/p2p_webrtc/: webrtcservice.cpp  webrtcservice.hpp
src/services/: CMakeLists.txt  breach_service.cpp  breach_service.hpp  password_service.cpp  password_service.hpp  theme_service.cpp  theme_service.hpp  totp_service.cpp  totp_service.hpp
src/utils/: totp.cpp  totp.hpp
